--- a/LPT_Motor_Driver.cbp
+++ b/LPT_Motor_Driver.cbp
@@ -32,6 +32,10 @@
 				<Linker>
 					<Add option="-s" />
 					<Add library="sfml-system-s" />
+					<Add library="nana" />
+					<Add library="gdi32" />
+					<Add library="freetype" />
+					<Add library="comdlg32" />
 					<Add library="winmm" />
 					<Add directory="lib/Windows/lib" />
 				</Linker>
